@@ -1,14 +1,14 @@
-=head1 NAME:
+=head1 NAME
 
 Rcs::Parser - Parse and analyze RCS files.
 
-=head1 SYNOPSIS:
+=head1 SYNOPSIS
 
 A basic RCS parser. This file does not rely upon any external utilities to
 parse RCS files. Currently it functions with RCS files generated by GNU 
 CVS and as documented by the rcsfile(5) man page. 
 
-=head1 EXAMPLE USAGE:
+=head1 EXAMPLE USAGE
 
 Retrieve the most recent file from an archive:
 
@@ -526,7 +526,7 @@ sub _unquote {
 
 1;
 
-=head1 KNOWN ISSUES:
+=head1 KNOWN ISSUES
 
 Beta Code:
 
@@ -543,16 +543,26 @@ mostly reverse engineered in this module. I have yet to have the time, or
 the skill and patience to disassemble the RCS portions of the code for GNU
 CVS.
 
-=head1 ERATTA:
+=head1 ERATTA
 
   Q: Why 'Rcs' and not 'RCS'
 
   A: Because the any directory named 'RCS' is usually ignored by most 
      versioning software and some developer tools. 
 
-=head1 AUTHORSHIP:
+=head1 BUGS AND SOURCE
+
+	Bug tracking for this module: https://rt.cpan.org/Ticket/Display.html?id=92644
+
+	Source hosting: http://www.github.com/bennie/perl-Rcs-Parser
+
+=head1 AUTHORSHIP
 
     Rcs::Parser vVERSIONTAG (DATETAG)
-
     (c) 2001-YEARTAG, Phillip Pollard <bennie@cpan.org>
-    Released under the Perl Artistic License
+
+=head1 LICENSE
+
+This source code is released under the "Perl Artistic License 2.0," the text of 
+which is included in the LICENSE file of this distribution. It may also be 
+reviewed here: http://opensource.org/licenses/artistic-license-2.0
